[package]
name = "teloc"
version = "0.2.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"
description = "Simple, compile-time DI framework for Rust"
repository = "https://github.com/p0lunin/teloc"
keywords = ["teloc", "di", "ioc", "dependency-injection"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/teloc"
readme = "../README.md"

[features]
default = ["std"]
actix-support = ["actix-web", "actix-http", "actix-router", "pin-project", "alloc"]
alloc = []
std = ["alloc", "once_cell/std"]

[dependencies]
actix-web = { version = "3", optional = true }
actix-http = { version = "2", optional = true }
actix-router = { version = "0.2", optional = true }
pin-project = { version = "1", optional = true }
frunk = { version = "0.4.0", default-features = false }
once_cell = { version = "1.4.1", features = ["critical-section"], default-features = false }

[dependencies.teloc_macros]
path = "../teloc_macros"
version = "0.2.0"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
